@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix missing manual section
+
 0.000113  2018-04-19 08:03:42-07:00 America/Los_Angeles
 
     - Fix typo
